--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,10 @@
-me: CI
-
-on:
-  push:
-    branches:
-      - master
-
+me: Build
+on: [pull_request, push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 12.x
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: 1.17.5
-      - run: flutter pub get
-      - run: flutter format --set-exit-if-changed .
-      - run: flutter analyze .
-      - run: flutter test
-      - run: flutter build apk
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+      - name: Checkout the code
+        uses: actions/checkout@v2
+      - name: Build the app
+        run: ./gradlew build
